include_directories(${PROJECT_SOURCE_DIR}/include)

# array
add_executable(N01 array/N01.cpp)
target_link_libraries(N01 IncludeLib)

# binary search
add_executable(N06 binary_search/N06.cpp)
target_link_libraries(N06 IncludeLib)

# dp
add_executable(N08 dp/N08.cpp)
target_link_libraries(N08 IncludeLib)

add_executable(N09 dp/N09.cpp)
target_link_libraries(N09 IncludeLib)

add_executable(N10 dp/N10.cpp)
target_link_libraries(N10 IncludeLib)

add_executable(N30 dp/N30.cpp)
target_link_libraries(N30 IncludeLib)

add_executable(N33 dp/N33.cpp)
target_link_libraries(N33 IncludeLib)

add_executable(N46 dp/N46.cpp)
target_link_libraries(N46 IncludeLib)

add_executable(N52 dp/N52.cpp)
target_link_libraries(N52 IncludeLib)

# hash
add_executable(N34 hash/N34.cpp)
target_link_libraries(N34 IncludeLib)

add_executable(N40 hash/N40.cpp)
target_link_libraries(N40 IncludeLib)

# heap
add_executable(N29 heap/N29.cpp)
target_link_libraries(N29 IncludeLib)

# math
add_executable(N11 math/N11.cpp)
target_link_libraries(N11 IncludeLib)

add_executable(N12 math/N12.cpp)
target_link_libraries(N12 IncludeLib)

add_executable(N31 math/N31.cpp)
target_link_libraries(N31 IncludeLib)

add_executable(N47 math/N47.cpp)
target_link_libraries(N47 IncludeLib)

add_executable(N48 math/N48.cpp)
target_link_libraries(N48 IncludeLib)

add_executable(N67 math/N67.cpp)
target_link_libraries(N67 IncludeLib)

# others
add_executable(N41 others/N41.cpp)
target_link_libraries(N41 IncludeLib)

# string
add_executable(N02 string/N02.cpp)
target_link_libraries(N02 IncludeLib)

add_executable(N27 string/N27.cpp)
target_link_libraries(N27 IncludeLib)

add_executable(N43 string/N43.cpp)
target_link_libraries(N43 IncludeLib)

add_executable(N44 string/N44.cpp)
target_link_libraries(N44 IncludeLib)

add_executable(N49 string/N49.cpp)
target_link_libraries(N49 IncludeLib)

add_executable(N53 string/N53.cpp)
target_link_libraries(N53 IncludeLib)

add_executable(N54 string/N54.cpp)
target_link_libraries(N54 IncludeLib)

# stack
add_executable(N05 stack/N05.cpp)
target_link_libraries(N05 IncludeLib)

add_executable(N20 stack/N20.cpp)
target_link_libraries(N20 IncludeLib)

add_executable(N21 stack/N21.cpp)
target_link_libraries(N21 IncludeLib)

# tree
add_executable(N26 tree/N26.cpp)
target_link_libraries(N26 IncludeLib)
